# robotica_lab_4

./: CMakeLists.txt  README.md  package.xml
codigo/: CMakeLists.txt
codigo/dynamixel_multi_motor/: CMakeLists.txt  package.xml
codigo/dynamixel_multi_motor/config/: basic.yaml
codigo/dynamixel_multi_motor/scripts/: jointPub.py
codigo/lab_4/scripts/: read_angs.py
codigo/scripts/: move_servo.py
codigo/scripts/gui/: gui.py
scripts/: go_home.py  move_all.py  read_angs.py
scripts/gui/: gui.py
